# openstudio

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: release.yml
admin/: README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.js
admin/scripts/: show-log.js
admin/src/launcher/: main.js  preload.cjs  settings.html
admin/src/server/: index.js
admin/src/server/db/: client.js
admin/src/server/lib/: platform.js
admin/src/server/repositories/: advertising.js  artists.js  automix-log.js  categories.js  events.js  formats.js  play-log.js  playlists.js  queue.js  schedules.js  stations.js  templates.js  tracks.js  users.js
admin/src/server/routes/: advertising.js  artists.js  automix-log.js  categories.js  events.js  formats.js  play-log.js  playlists.js  queue.js  schedules.js  stations.js  tracks.js  users.js
admin/src/server/services/: folder-import.js  import-flac.js  queue-generator.js  waveform.js
admin/src/ui/: App.jsx  StationContext.jsx  main.jsx  styles.css
admin/src/ui/crud/: ConfirmDialog.jsx  CrudFormModal.jsx  CrudPage.jsx  DataTable.jsx
admin/src/ui/pages/: AdvertisersPage.jsx  CampaignTracksPage.jsx  CampaignsPage.jsx  CategoryPage.jsx  ContactsPage.jsx  CuePage.jsx  EventsPage.jsx  LogPage.jsx  PlaylistEditorPage.jsx  (+7 more)
config/: database.json
docs/: schema.fr.md  schema.md
migrations/: 0001_initial_schema.sql  0002_seed.sql
src/: db.rs  main.rs
src/audio/: mod.rs
src/model/: mod.rs
src/ui/: aux.rs  deck.rs  instant.rs  mod.rs  picker.rs  queue.rs  search.rs  styles.rs
(+7 files in other folders)
