[package]
name = "openstudio"
version = "0.1.0"
edition = "2021"
authors = ["Mickael Monsieur"]

[package.metadata.packager]
product-name  = "OpenStudio"
identifier    = "be.mickael.openstudio"
copyright     = "Mickael Monsieur © 2026"
category      = "Music"
description   = "Professional audio player"
formats       = ["app", "dmg"]
icons         = ["icons/512x512.png"]

[package.metadata.packager.macos]
signing-identity = "-"

[dependencies]
iced       = { version = "0.13", features = ["tokio", "lazy"] }
symphonia  = { version = "0.5", default-features = false, features = ["flac"] }
cpal       = "0.15"
libc       = "0.2"
tokio      = { version = "1", features = ["full"] }
iced_fonts = { version = "0.1.1", features = ["bootstrap"] }
postgres   = "0.19"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
